Update to fix safari z-index on ios

--- a/CSS/Components/Swiper Styles/landing-page-swiper.css
+++ b/CSS/Components/Swiper Styles/landing-page-swiper.css
@@ -167,7 +167,7 @@ body {
     width: 100%;
     position: absolute;
     top: 0;
-    z-index: 2;
+    z-index: 1;
     opacity: 0.75;
     -webkit-transition: opacity 300ms;
     transition: opacity 300ms;
@@ -181,7 +181,7 @@ body {
     height: 100%;
     width: 100%;
 
-    z-index: 2;
+    z-index: 1;
     visibility: hidden;
   }
 
